finished html basic template and jumped the gun on styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA_Compatible" content="ie=edge">
-        <title>Calcultor</title>
-        <link rel="stylesheet.css" href="style.css">
+        <title>Calculator</title>
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
-
+    <div class="webpage">
+        <div class="calculator">
+            <div class="row1">
+                <h1 class="screen">testingfsjdfhsiufdshfiushfisfsdhfsjfhsdjfsdhjkf</h1>
+            </div>
+            <div class="row2">
+                <button class="operator">AC</button>
+                <button class="percent">%</button>
+                <button class="divide">÷</button>
+                <button class="delete">⌫</button>
+            </div>
+            <div class="row3">
+                <button class="seven">7</button>
+                <button class="eight">8</button>
+                <button class="nine">9</button>
+                <button class="multiply">x</button>
+            </div>
+            <div class="row4">
+                <button class="four">4</button>
+                <button class="five">5</button>
+                <button class="six">6</button>
+                <button class="subtract">-</button>
+            </div>
+            <div class="row5">
+                <button class="one">1</button>
+                <button class="two">2</button>
+                <button class="three">3</button>
+                <button class="add">+</button>
+            </div>
+            <div class="row6">
+                <button class="zero">0</button>
+                <button class="double-zero">00</button>
+                <button class="decimal">.</button>
+                <button class="calculate">=</button>
+            </div>
+        </div>
+    </div>
     <head>
         <script src="index.js" defer></script>
     </head>
