button pressing now populates display

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="webpage">
         <div class="calculator">
             <div class="row1">
-                <h1 class="screen">testingfsjdfhsiufdshfiushfisfsdhfsjfhsdjfsdhjkf</h1>
+                <h1 class="screen"></h1>
             </div>
             <div class="row2">
-                <button class="operator">AC</button>
+                <button class="clear">AC</button>
                 <button class="percent">%</button>
                 <button class="divide">÷</button>
                 <button class="delete">⌫</button>
